--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 
     <title>Multiplayer MineSweeper</title>
     <link rel="stylesheet" href="/css"/>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/css-tailwind"/>
     <script src="/js" defer></script>
 </head>
 <body>
