Dynamically get host and protocol.

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,14 @@
     join_btn.addEventListener("click", function (e) {
         this.disabled = true;
         username.disabled = true;
-        const websocket = new WebSocket("ws://localhost:3000/websocket");
+        // Automatically determine WebSocket protocol based on the current page protocol
+        const protocol = window.location.protocol === "https:" ? "wss" : "ws";
+
+        // Dynamically build the WebSocket URL
+        const host = window.location.host; // Gets the current hostname and port
+        const port = window.location.port; // Gets the current hostname and port
+
+        const websocket = new WebSocket(`${protocol}://${host}:${port}/websocket`);
 
         websocket.onopen = function () {
             console.log("connection opened");
